<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".activities.IntroActivity">

    <TextView
        android:layout_width="155sp"
        android:layout_height="30sp"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="@string/welcome_to"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black1"
        android:gravity="center_horizontal"
        android:textSize="27sp"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_light"/>

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="292sp"
        android:layout_height="55sp"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="@color/black1"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_light"/>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">



        <ImageView
            android:layout_width="152.16dp"
            android:layout_height="190dp"
            android:layout_marginStart="100sp"
            android:src="@drawable/gramshikshalogo"
            />



    </FrameLayout>

    <TextView
        android:layout_width="289sp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:layout_marginBottom="20dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/black"
        android:textSize="@dimen/lets_get_started_text_size"
        android:fontFamily="@font/lexend_light"/>


    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="289sp"
        android:layout_height="59sp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="289sp"
        android:layout_height="59sp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/white_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/main"
        android:textSize="@dimen/btn_text_size" />

</LinearLayout>